--- a/shard.yml
+++ b/shard.yml
@@ -8,6 +8,11 @@ targets:
   celestial:
     main: src/celestial.cr
 
+development_dependencies:
+  ameba:
+    github: veelenga/ameba
+    version: ~> 0.9.1
+
 crystal: 0.27.2
 
 license: MIT
