feat: Implement Kemal setup
Signed-off-by: microlith57 <microlith57@gmail.com>

--- a/shard.yml
+++ b/shard.yml
@@ -8,6 +8,10 @@ targets:
   celestial:
     main: src/celestial.cr
 
+dependencies:
+  kemal:
+    github: kemalcr/kemal
+
 development_dependencies:
   ameba:
     github: veelenga/ameba
